changed name and group back for inventory creation

--- a/roles/hcloud-destroy/tasks/main.yml
+++ b/roles/hcloud-destroy/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - hcloud_server:
     name:
-    - "test-{{ item.name }}"
+    - "HCLOUD_NODES_PREFIX-{{ item.name }}"
     state: absent
   with_items: "{{ servers }}"
