--- a/ansible.cfg
+++ b/ansible.cfg
@@ -6,6 +6,7 @@ callback_whitelist = profile_tasks
 stdout_callback = debug
 gathering = explicit
 force_handlers = true
+host_key_checking = False
 
 [ssh_connection]
 pipelining = true
