--- a/roles/hcloud-destroy/tasks/main.yml
+++ b/roles/hcloud-destroy/tasks/main.yml
@@ -1,8 +1,9 @@
 ---
-- hcloud_ssh_key:
-    state: list
-    token : "{{ HCLOUD_TOKEN }}"
-  register: 'hcloud_ssh_keys'
+# - hcloud_ssh_key:
+#     state: list
+#     token : "{{ HCLOUD_TOKEN }}"
+#   register: 'hcloud_ssh_keys'
+
 - hcloud_server:
     name:
     - "{{ HCLOUD_NODES_PREFIX }}-{{ item.name }}"
