--- a/roles/ubuntu-1804/tasks/main.yml
+++ b/roles/ubuntu-1804/tasks/main.yml
@@ -23,7 +23,7 @@
 
 - name: add docker deb repo
   apt_repository:
-    repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable"
+    repo: "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable"
     state: present
     filename: docker
   notify: update repositories
