some fixes for ansible

--- a/roles/hcloud-destroy/tasks/main.yml
+++ b/roles/hcloud-destroy/tasks/main.yml
@@ -4,7 +4,8 @@
 #     token : "{{ HCLOUD_TOKEN }}"
 #   register: 'hcloud_ssh_keys'
 
-- hcloud_server:
+- name: remove servers
+  hcloud_server:
     name:
     - "{{ HCLOUD_NODES_PREFIX }}-{{ item.name }}"
     state: absent
