--- a/roles/resources-webhook/tasks/k8s-webhook-config.yml
+++ b/roles/resources-webhook/tasks/k8s-webhook-config.yml
@@ -1,7 +1,8 @@
 
 ---
 - name: base64 encoded resources webhook client certificate
-  local_action: shell cd {{ resources_webhook_cert_dir }}; cat client.pem | base64 | tr -d " \t\n\r"
+  # todo: figure useing instead of server.pem ca.pem or client pem or better why client.pem is not working
+  local_action: shell cd {{ resources_webhook_cert_dir }}; cat server.pem | base64 | tr -d " \t\n\r"
   register: resources_webhook_client_cert_base64_cli
   changed_when: false
 
