--- a/addons/core-dns.yaml
+++ b/addons/core-dns.yaml
@@ -211,3 +211,26 @@ spec:
             items:
             - key: nginx.conf
               path: nginx.conf
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: core-dns
+  namespace: kube-system
+  annotations:
+    prometheus.io/port: "9153"
+    prometheus.io/scrape: "true"
+  labels:
+    k8s-app: kube-dns
+    kubernetes.io/cluster-service: "true"
+    kubernetes.io/name: "CoreDNS"
+spec:
+  selector:
+    k8s-app: kube-dns
+  ports:
+  - name: dns
+    port: 53
+    protocol: UDP
+  - name: dns-tcp
+    port: 53
+    protocol: TCP
