--- a/roles/ubuntu-1604/tasks/kernel-configuration.yml
+++ b/roles/ubuntu-1604/tasks/kernel-configuration.yml
@@ -20,6 +20,16 @@
     - "fs.inotify.max_user_watches=1048576"
   notify: apply kernel configuration
 
+- name: disable ipv6
+  lineinfile:
+    path: /etc/sysctl.conf
+    line: '{{ item }}'
+  with_items:
+    - "net.ipv6.conf.all.disable_ipv6 = 1"
+    - "net.ipv6.conf.default.disable_ipv6 = 1"
+    - "net.ipv6.conf.lo.disable_ipv6 = 1"
+  notify: apply kernel configuration
+
 - name: enable limits for user sessions
   lineinfile:
     path: /etc/pam.d/common-session
