--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = inventory
+inventory = ./inventory
 nocows = 1
 retry_files_enabled = false
 callback_whitelist = profile_tasks
