allow system a short moment to setup networking

--- a/tests/ping/google-dns.yml
+++ b/tests/ping/google-dns.yml
@@ -13,5 +13,5 @@ spec:
         command:
           - sh
           - -c
-          - "ping -c 1 8.8.8.8"
+          - "sleep 2 && ping -c 1 8.8.8.8"
       restartPolicy: Never
