add wait_for 15 seconds, for environment

--- a/roles/hcloud-provision/tasks/main.yml
+++ b/roles/hcloud-provision/tasks/main.yml
@@ -31,6 +31,10 @@
 
 
 # ensure server is running (if the server already exists)
+
+- name: wait for environment
+  wait_for: timeout=15
+  
 - name: check for running servers
   hcloud_server:
    name:
