split ubuntu-1804 role into linux and docker role

--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -4,9 +4,9 @@
     - name: wait for ssh to be available
       local_action: wait_for port=22 host="{{ ansible_host }}" search_regex=OpenSSH
 
-- hosts: ubuntu-1804
+- hosts: all
   roles:
-    - { role: ubuntu-1804 }
+    - { role: linux }
 
 - hosts: testing
   roles:
