--- a/roles/ovh-provision/defaults/main.yml
+++ b/roles/ovh-provision/defaults/main.yml
@@ -4,10 +4,10 @@ flavor: s1-8
 region_name: SBG3
 servers:
   - name: node1
-    groups: ovh,ubuntu-1804,testing,etcds,masters
+    groups: ovh,testing,etcds,masters
   - name: node2
-    groups: ovh,ubuntu-1804,testing,etcds,masters
+    groups: ovh,testing,etcds,masters
   - name: node3
-    groups: ovh,ubuntu-1804,testing,etcds
+    groups: ovh,testing,etcds
   - name: node4
-    groups: ovh,ubuntu-1804,testing
+    groups: ovh,testing
