--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -9,6 +9,7 @@
     - { role: linux }
     - { role: disable-swap }
     - { role: docker }
+    - { role: wireguard }
     - { role: node }
     - { role: registry-mirror }
 
