--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -10,6 +10,7 @@
     - { role: disable-swap }
     - { role: docker }
     - { role: crio }
+    - { role: wireguard }
     - { role: node }
     - { role: registry-mirror }
 
