--- a/group_vars/testing.yml
+++ b/group_vars/testing.yml
@@ -5,6 +5,7 @@ apiserver_limit_target_ram_mb: "{{ 350 + (nodes_count|int * kubelet_max_pods * 2
 
 cluster:
   name: kubernetes-development
+  api: k8s.domain.tld
   users:
     - username: demo
       token: 11f050eb-d658-47a0-ab74-7a830d6aaa1c
