--- a/roles/crio/handlers/main.yml
+++ b/roles/crio/handlers/main.yml
@@ -1,11 +1,15 @@
+---
 
 - name: update repositories
   apt:
     update_cache: yes
 
-- name: restart docker
+- name: restart crio
   systemd:
-    name: docker
+    name: crio
     daemon_reload: yes
     state: restarted
     enabled: yes
+
+- name: apply kernel configuration
+  command: sysctl -p
