--- a/roles/linux/tasks/kernel-config.yml
+++ b/roles/linux/tasks/kernel-config.yml
@@ -20,6 +20,14 @@
     - "fs.inotify.max_user_watches=1048576"
   notify: apply kernel configuration
 
+- name: enable routing
+  lineinfile:
+    path: /etc/sysctl.conf
+    line: '{{ item }}'
+  with_items:
+    - net.ipv4.ip_forward = 1
+  notify: apply kernel configuration
+
 - name: disable ipv6
   lineinfile:
     path: /etc/sysctl.conf
