--- a/roles/crio/handlers/main.yml
+++ b/roles/crio/handlers/main.yml
@@ -3,9 +3,9 @@
   apt:
     update_cache: yes
 
-- name: restart docker
+- name: restart crio
   systemd:
-    name: docker
+    name: crio
     daemon_reload: yes
     state: restarted
     enabled: yes
