use crio as the container runtime

--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -16,6 +16,7 @@
   roles:
     - { role: disable-swap }
     - { role: docker }
+    - { role: crio }
     - { role: node }
     - { role: registry-mirror }
 
