--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -14,6 +14,7 @@
     - { role: disable-swap }
     - { role: docker }
     - { role: wireguard }
+    - { role: crio }
     - { role: node }
     - { role: registry-mirror }
 
