install docker only when used as container runtime

--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -8,8 +8,17 @@
   roles:
     - { role: linux }
     - { role: disable-swap }
+
+- hosts: docker
+  roles:
     - { role: docker }
+
+- hosts: crio
+  roles:
     - { role: crio }
+
+- hosts: all
+  roles:
     - { role: wireguard }
     - { role: node }
     - { role: registry-mirror }
