--- a/tests/host-port/nginx.yaml
+++ b/tests/host-port/nginx.yaml
@@ -1,29 +1,13 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: test-node-port
----
-kind: Service
-apiVersion: v1
-metadata:
-  name: nginx
-  namespace: test-node-port
-  labels:
-    app: nginx
-spec:
-  selector:
-    app: nginx
-  ports:
-  - protocol: TCP
-    port: 80
-#    nodePort: 31556
-  type: NodePort
+  name: test-host-port
 ---
 apiVersion: apps/v1
-kind: Deployment
+kind: DaemonSet
 metadata:
   name: nginx
-  namespace: test-node-port
+  namespace: test-host-port
 spec:
   selector:
     matchLabels:
@@ -42,6 +26,7 @@ spec:
             memory: 100Mi
         ports:
         - containerPort: 80
+          hostPort: 32123
         readinessProbe:
           httpGet:
             path: /
