--- a/kubernetes.yml
+++ b/kubernetes.yml
@@ -9,39 +9,40 @@
     - { role: linux }
     - { role: disable-swap }
 
-- hosts: docker
-  roles:
-    - { role: docker }
-
-- hosts: crio
-  roles:
-    - { role: crio }
-
-- hosts: all
-  roles:
-    - { role: wireguard }
-    - { role: node }
-    - { role: registry-mirror }
-
-- hosts: etcds
-  pre_tasks:
-    - name: set etcd_id
-      set_fact: etcd_id={{ item.0 + 1 }}
-      with_indexed_items: "{{ groups['etcds'] }}"
-      when: item.1 == inventory_hostname
-  roles:
-    - { role: etcd }
-
-- hosts: masters
-  tasks:
-    - name: create user access tokens
-      import_role:
-        name: authentication-tokens
-      delegate_to: localhost
-      run_once: true
-  roles:
-    - { role: master }
-
-- hosts: all:!masters
-  roles:
-    - { role: master-proxy }
+#- hosts: docker
+#  roles:
+#    - { role: docker }
+#
+#- hosts: crio
+#  roles:
+#    - { role: crio }
+#
+#- hosts: all
+#  roles:
+#    - { role: wireguard }
+#    - { role: node }
+#    - { role: registry-mirror }
+#
+#- hosts: etcds
+#  pre_tasks:
+#    - name: set etcd_id
+#      set_fact: etcd_id={{ item.0 + 1 }}
+#      with_indexed_items: "{{ groups['etcds'] }}"
+#      when: item.1 == inventory_hostname
+#  roles:
+#    - { role: etcd }
+#
+#- hosts: masters
+#  tasks:
+#    - name: create user access tokens
+#      import_role:
+#        name: authentication-tokens
+#      delegate_to: localhost
+#      run_once: true
+#  roles:
+#    - { role: master }
+#
+#- hosts: all:!masters
+#  roles:
+#    - { role: master-proxy }
+#
